--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="main.css">
 
 
-<title> Tearms of Service </title> <!-- only required tag in the Head section. Appears on the tab in your browser. -->
+<title> Contact Us </title> <!-- only required tag in the Head section. Appears on the tab in your browser. -->
 <!-- define encoding of the text -->
 <meta charset ="UTF-8" >
 <!-- Body Style Color, Shared throughout all pages | Dark Grey -->
@@ -37,6 +37,7 @@ body {
     <a href="signup.html" style="float:right"> Sign Up </a>
     <a href="login.html" style="float:right"> Log In </a>
   </div>
+  <!-- Contact Form, Submit 'real' forms. Place holder and won't submit to anything -->
 <div class="container">
   <form id="contact" method="post">
     <h3>Contact US</h3>
