--- a/Resell.html
+++ b/Resell.html
@@ -40,6 +40,7 @@ body {
     <a href="login.html" style="float:right"> Log In </a>
   </div>
 <div class="resell">
+  <!-- Information of becoming a reseller, page layout -->
 <h3> Want to become a Reseller? information below is how.</h3>
 <ol>
   <li>
