--- a/Signup.html
+++ b/Signup.html
@@ -48,6 +48,7 @@
   </div>
 
   <input type="button" class="btn" value="Sign up">
+  <!-- Click if you have an account, hyperlink to login page -->
   <p style="text-align:center"> Already have an account? Login<a href="Login.html"> Here </a>
 </div>
   </body>
