--- a/about-us.html
+++ b/about-us.html
@@ -38,15 +38,19 @@ body {
     <a href="login.html" style="float:right"> Log In </a>
   </div>
 <div class="about-us">
+  <!-- Company Section, Telling about the Company -->
 <h4 style= "text-align:center;"> About our Company </h4>
-<ol>
-  <li>Our Company Focuses on providing legitament sellers with real buyers looking to buy popular Video Games at a cheaper price </li>
-  <li> We Strive everyday to bring more sellers to the website so our buyers can have a better experince and get to gaming on the new titles faster </li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-</ol>
+<p style="text-align:center;"> At BuyCheapGames.com, we specialize in providing a big selection of games, digital codes, and the latest products to our customers. We're commited to providing a large range from Xbox, to PS4, even to PC Games. All at a low competitive price. </p>
+</br>
+<h3> Current Payment Types Supported </h3>
+<ul style="list-style-type:none">
+  <li>Paypal</li>
+  <li>Mastercard</li>
+  <li>Visa</li>
+  <li>American Express</li>
+  <li>Bitcoin</li>
+</ul>
+
 
 
 
