--- a/tos.html
+++ b/tos.html
@@ -40,7 +40,7 @@ body {
     <a href="login.html" style="float:right"> Log In </a>
   </div>
 <div class="TOS">
-
+<!-- ToS page,  Layout and numbered it. -->
 <p style="text-align:center;"> Our </p>
 <h3 style="text-align:center;"> TERMS OF SERVICE </h3>
 
