--- a/login.html
+++ b/login.html
@@ -30,6 +30,7 @@
       <a href="signup.html" style="float:right"> Sign Up </a>
       <a href="login.html" style="float:right"> Log In </a>
     </div>
+    <!-- Login Box -->
 <div class="login-box">
   <h1>Login</h1>
   <div class="textbox">
@@ -43,6 +44,7 @@
   </div>
 
   <input type="button" class="btn" value="Sign in">
+  <!-- Click if you don't have an account, hyperlink to signup page -->
   <p style="text-align:center"> Don't have an account? Sign up <a href="signup.html"> Here </a>
 </div>
   </body>
