--- a/Signup.html
+++ b/Signup.html
@@ -30,6 +30,7 @@
       <a href="signup.html" style="float:right"> Sign Up </a>
       <a href="login.html" style="float:right"> Log In </a>
     </div>
+    <!-- Signup Box -->
 <div class="login-box">
   <h1>Sign Up</h1>
   <div class="textbox">
