--- a/index.html
+++ b/index.html
@@ -39,14 +39,43 @@ body {
   <a href="signup.html" style="float:right"> Sign Up </a>
   <a href="login.html" style="float:right"> Log In </a>
 </div>
+<!-- Setting up Homepage Layout -->
 <div class="index">
-<iframe width="512" height="512" src="617COYAgKzL.png" name="Games" </iframe>
-  <iframe width="512" height="512" src="617COYAgKzL.png" name="Games1" </iframe>
-
-<a  style="text-algin:right "href="bg.jpg" target="Games"></a>
-<a  href="bg.jpg" target="Games1"></a>
-<a  href="bg.jpg" target="Games"></a>
-
+<div class="pictures">
+  <img src="Games\Games\RDR2.jpeg" alt="Picture of Red Dead Redemption 2" style="width:33.33%"/>
+  <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+  <p> <b> <a href="games.html">Buy Red Dead Redemption 2 Now!</a></b> </p>
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+ <img src="Games\Games\BO4.jpeg" alt="Picture of Black Ops 4" style="width:33.33%" />
+ <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+ <p> <b> <a href="games.html">Buy Black Ops 4 Now!</a></b> </p>
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games\Games\B5.jpeg" alt="Picture of Battlefield 5" style="width:33.33%" />
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="games.html">Buy Battlefield 5 Now!</a> </b> </p>
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games\Games\GOW.jpeg" alt="Picture of God of War" style="width:33.33%" />
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="games.html">Buy God of War Now</a><b> </p>
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games\Games\SOT.jpeg" alt="Picture of Sea of theives" style="width:33.33%" />
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="games.html">Buy Sea of Theives Now!</a></b> </p>
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games\Games\SM.jpeg" alt="Picture of Spider-Man" style="width:33.33%" />
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="games.html">Buy Spider-Man Now!</a></b> </p>
+</div>
 </div>
 </body>
 </html>
