--- a/tos.html
+++ b/tos.html
@@ -43,8 +43,8 @@ body {
 <!-- ToS page,  Layout and numbered it. -->
 <p style="text-align:center;"> Our </p>
 <h3 style="text-align:center;"> TERMS OF SERVICE </h3>
-
-<div class="tos-TAC">
+<!-- Tos Text, Top of page and basic terms -->
+<div class="TOS">
   <ol>
     <li>
       <b>Terms and Conditions:</b>
@@ -56,7 +56,8 @@ body {
 	</li>
 </ol>
 </div>
-<div class="tos-BUY">
+<!-- Terms about buying video games -->
+<div class="TOS">
   <ol>
     <li>
       <b>Buying Terms and Conditions:</b>
@@ -66,7 +67,8 @@ body {
   	</ol>
   </ol>
 </div>
-<div class="tos-SELL">
+<!-- Terms about selling on our website -->
+<div class="TOS">
   <ol>
     <li>
       <b>Selling Terms and Conditions:</b>
