--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
   <img src="Games\Games\RDR2.jpeg" alt="Picture of Red Dead Redemption 2" style="width:33.33%"/>
   <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
   <p> <b> <a href="games.html">Buy Red Dead Redemption 2 Now!</a></b> </p>
-  <p> <b> <a href="games.html">Want to sell Red Dead Redemption 2? Click here </a></b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Red Dead Redemption 2? Click here </a></b> </p>
 
 </div>
 <div class="pictures">
@@ -53,7 +53,7 @@ body {
  <img src="Games\Games\BO4.jpeg" alt="Picture of Black Ops 4" style="width:33.33%" />
  <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
  <p> <b> <a href="games.html">Buy Black Ops 4 Now!</a></b> </p>
-   <p> <b> <a href="games.html">Want to sell Black Ops 4? Click here </a></b> </p>
+   <p> <b> <a href="Seller.html">Want to sell Black Ops 4? Click here </a></b> </p>
 
 </div>
 <div class="pictures">
@@ -61,7 +61,7 @@ body {
 <img src="Games\Games\B5.jpeg" alt="Picture of Battlefield 5" style="width:33.33%" />
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
 <p> <b> <a href="games.html">Buy Battlefield 5 Now!</a> </b> </p>
-  <p> <b> <a href="games.html">Want to sell Battlefield 5? Click here </a></b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Battlefield 5? Click here </a></b> </p>
 
 </div>
 <div class="pictures">
@@ -69,7 +69,7 @@ body {
 <img src="Games\Games\GOW.jpeg" alt="Picture of God of War" style="width:33.33%" />
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
 <p> <b> <a href="games.html">Buy God of War Now</a><b> </p>
-  <p> <b> <a href="games.html">Want ot sell God of War? Click here </a></b> </p>
+  <p> <b> <a href="Seller.html">Want ot sell God of War? Click here </a></b> </p>
 
 </div>
 <div class="pictures">
@@ -77,7 +77,7 @@ body {
 <img src="Games\Games\SOT.jpeg" alt="Picture of Sea of theives" style="width:33.33%" />
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
 <p> <b> <a href="games.html">Buy Sea of Theives Now!</a></b> </p>
-  <p> <b> <a href="games.html">Want to sell Sea of Thieves? Click here </a></b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Sea of Thieves? Click here </a></b> </p>
 
 </div>
 <div class="pictures">
@@ -85,7 +85,7 @@ body {
 <img src="Games\Games\SM.jpeg" alt="Picture of Spider-Man" style="width:33.33%" />
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
 <p> <b> <a href="games.html">Buy Spider-Man Now!</a></b> </p>
-  <p> <b> <a href="games.html">Want to sell Spider-Man? Click here </a></b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Spider-Man? Click here </a></b> </p>
 
 </div>
 </div>
