--- a/Seller.html
+++ b/Seller.html
@@ -3,6 +3,7 @@
 
 <html lang="en"> <!-- Language of this -->
 <!-- Two style sheets, Linking to fonts/the main CSS file i am using -->
+<link rel="stylesheet" href="ContactForm.css">
 <link rel="stylesheet" href="main.css">
 
 
@@ -38,14 +39,34 @@ body {
   <a href="signup.html" style="float:right"> Sign Up </a>
   <a href="login.html" style="float:right"> Log In </a>
 </div>
-<div class="Seller">
-
-
-
-
-
-
-
+<div class="container">
+  <form id="contact" method="post">
+    <h3>Want to sell a game? Here's how</h3>
+    <fieldset>
+      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Email address to Contact you" type="text" tabindex="2" >
+    </fieldset>
+    <fieldset>
+      <input placeholder="Which game were you interested in selling?" type="text" tabindex="3" >
+    </fieldset>
+    <fieldset>
+      <input placeholder="how much will you charge for this game? Ex. (59.99 , 58.75, Etc...)" type="text" tabindex="4" >
+    </fieldset>
+    <fieldset>
+      <input placeholder="Perferedd Method of being paid (Paypal, Bank Transer, Etc...)" type="text" tabindex="5" >
+    </fieldset>
+    <fieldset>
+      <input placeholder="Perferedd Currency (USD, CAD, EURO, Etc...)" type="text" tabindex="6" >
+    </fieldset>
+    <fieldset>
+      <textarea placeholder="Any Questions for us?" type="text" tabindex="7"></textarea>
+    </fieldset>
+    <fieldset>
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+    </fieldset>
+    </form>
 </div>
 </body>
-</html>
+</HTML>
