--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 <!-- Setting up Homepage Layout -->
 <div class="index">
 <div class="pictures">
-  <img src="Games\Games\RDR2.jpeg" alt="Picture of Red Dead Redemption 2" style="width:33.33%"/>
+  <img src="Games/Games/RDR2.jpeg" alt="Picture of Red Dead Redemption 2" style="width:33.33%">
   <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
   <p> <b> <a href="games.html">Buy Red Dead Redemption 2 Now!</a></b> </p>
   <p> <b> <a href="Seller.html">Want to sell Red Dead Redemption 2? Click here </a></b> </p>
@@ -50,7 +50,7 @@ body {
 </div>
 <div class="pictures">
   <!-- Setting Width/Game Image for page -->
- <img src="Games\Games\BO4.jpeg" alt="Picture of Black Ops 4" style="width:33.33%" />
+ <img src="Games/Games/BO4.jpeg" alt="Picture of Black Ops 4" style="width:33.33%">
  <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
  <p> <b> <a href="games.html">Buy Black Ops 4 Now!</a></b> </p>
    <p> <b> <a href="Seller.html">Want to sell Black Ops 4? Click here </a></b> </p>
@@ -58,7 +58,7 @@ body {
 </div>
 <div class="pictures">
   <!-- Setting Width/Game Image for page -->
-<img src="Games\Games\B5.jpeg" alt="Picture of Battlefield 5" style="width:33.33%" />
+<img src="Games/Games/B5.jpeg" alt="Picture of Battlefield 5" style="width:33.33%">
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
 <p> <b> <a href="games.html">Buy Battlefield 5 Now!</a> </b> </p>
   <p> <b> <a href="Seller.html">Want to sell Battlefield 5? Click here </a></b> </p>
@@ -66,15 +66,15 @@ body {
 </div>
 <div class="pictures">
   <!-- Setting Width/Game Image for page -->
-<img src="Games\Games\GOW.jpeg" alt="Picture of God of War" style="width:33.33%" />
+<img src="Games/Games/GOW.jpeg" alt="Picture of God of War" style="width:33.33%">
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
-<p> <b> <a href="games.html">Buy God of War Now</a><b> </p>
+<p> <b> <a href="games.html">Buy God of War Now</a></b> </p>
   <p> <b> <a href="Seller.html">Want ot sell God of War? Click here </a></b> </p>
 
 </div>
 <div class="pictures">
   <!-- Setting Width/Game Image for page -->
-<img src="Games\Games\SOT.jpeg" alt="Picture of Sea of theives" style="width:33.33%" />
+<img src="Games/Games/SOT.jpeg" alt="Picture of Sea of theives" style="width:33.33%">
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
 <p> <b> <a href="games.html">Buy Sea of Theives Now!</a></b> </p>
   <p> <b> <a href="Seller.html">Want to sell Sea of Thieves? Click here </a></b> </p>
@@ -82,7 +82,7 @@ body {
 </div>
 <div class="pictures">
   <!-- Setting Width/Game Image for page -->
-<img src="Games\Games\SM.jpeg" alt="Picture of Spider-Man" style="width:33.33%" />
+<img src="Games/Games/SM.jpeg" alt="Picture of Spider-Man" style="width:33.33%">
 <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
 <p> <b> <a href="games.html">Buy Spider-Man Now!</a></b> </p>
   <p> <b> <a href="Seller.html">Want to sell Spider-Man? Click here </a></b> </p>
