--- a/Seller.html
+++ b/Seller.html
@@ -61,7 +61,7 @@ body {
       <input placeholder="Perferedd Currency (USD, CAD, EURO, Etc...)" type="text" tabindex="6" >
     </fieldset>
     <fieldset>
-      <textarea placeholder="Any Questions for us?" type="text" tabindex="7"></textarea>
+      <textarea placeholder="Any Questions for us?" tabindex="7"></textarea>
     </fieldset>
     <fieldset>
       <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
