--- a/games.html
+++ b/games.html
@@ -3,60 +3,91 @@
 
 <html lang="en"> <!-- Language of this -->
 <!-- Two style sheets, Linking to fonts/the main CSS file i am using -->
-<link rel="stylesheet" href="ContactForm.css">
 <link rel="stylesheet" href="main.css">
+<!-- First section of the HTML program  -->
 
-
-<title> Contact Us </title> <!-- only required tag in the Head section. Appears on the tab in your browser. -->
+<title>Buy Cheap Games</title> <!-- only required tag in the Head section. Appears on the tab in your browser. -->
 <!-- define encoding of the text -->
 <meta charset ="UTF-8" >
-<!-- Body Style Color, Shared throughout all pages | Dark Grey -->
+<!-- Body Style Color, Shared throughout all pages -->
 <style>
 body {
   background-color: #ddd;
 }
 </style>
 <!-- closes head section -->
+</head>
+
+<!-- Second section of the HTML program. Appears in the body of the broswer. -->
 <body>
-  <!-- The navigation menu -->
-  <div class="navbar">
-    <a href="index.html">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">New Games
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="games.html">Buy</a>
-        <a href="Seller.html">Sell</a>
-      </div>
+<!-- The navigation menu -->
+<div class="navbar">
+  <a href="index.html">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">New Games
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="games.html">Buy</a>
+      <a href="Seller.html">Sell</a>
     </div>
-    <a href="about-us.html">About us</a>
-    <a href="tos.html">ToS</a>
-    <a href="Resell.html">Become a reseller</a>
-    <a href="Contact.html">Contact Us</a>
-    <a href="signup.html" style="float:right"> Sign Up </a>
-    <a href="login.html" style="float:right"> Log In </a>
   </div>
-  <!-- Contact Form, Submit 'real' forms. Place holder and won't submit to anything -->
-<div class="container">
-  <form id="contact" method="post">
-    <h3>Buy a Game!</h3>
-    <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Email address to Contact you to pay for the game" type="text" tabindex="2" >
-    </fieldset>
-    <fieldset>
-      <input placeholder="Which Game did you want to buy?" type="text" tabindex="3" >
-    </fieldset>
-    <fieldset>
-      <input placeholder="How will you be paying today? (Paypal, Mastercard, Visa, etc...?)" type="text" tabindex="4" >
-    </fieldset>
-    <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-    </fieldset>
-    </form>
+  <a href="about-us.html">About us</a>
+  <a href="tos.html">ToS</a>
+  <a href="Resell.html">Become a reseller</a>
+  <a href="Contact.html">Contact Us</a>
+  <a href="signup.html" style="float:right"> Sign Up </a>
+  <a href="login.html" style="float:right"> Log In </a>
+</div>
+<!-- Setting up Homepage Layout -->
+<div class="index">
+<div class="pictures">
+  <img src="Games/Games/RDR2.jpeg" alt="Picture of Red Dead Redemption 2" style="width:33.33%">
+  <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+  <p> <b> <a href="buy.html">Buy Red Dead Redemption 2 Now!</a></b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Red Dead Redemption 2? Click here </a></b> </p>
+
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+ <img src="Games/Games/BO4.jpeg" alt="Picture of Black Ops 4" style="width:33.33%">
+ <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+ <p> <b> <a href="buy.html">Buy Black Ops 4 Now!</a></b> </p>
+   <p> <b> <a href="Seller.html">Want to sell Black Ops 4? Click here </a></b> </p>
+
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games/Games/B5.jpeg" alt="Picture of Battlefield 5" style="width:33.33%">
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="buy.html">Buy Battlefield 5 Now!</a> </b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Battlefield 5? Click here </a></b> </p>
+
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games/Games/GOW.jpeg" alt="Picture of God of War" style="width:33.33%">
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="buy.html">Buy God of War Now</a></b> </p>
+  <p> <b> <a href="Seller.html">Want ot sell God of War? Click here </a></b> </p>
+
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games/Games/SOT.jpeg" alt="Picture of Sea of theives" style="width:33.33%">
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="buy.html">Buy Sea of Theives Now!</a></b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Sea of Thieves? Click here </a></b> </p>
+
+</div>
+<div class="pictures">
+  <!-- Setting Width/Game Image for page -->
+<img src="Games/Games/SM.jpeg" alt="Picture of Spider-Man" style="width:33.33%">
+<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
+<p> <b> <a href="buy.html">Buy Spider-Man Now!</a></b> </p>
+  <p> <b> <a href="Seller.html">Want to sell Spider-Man? Click here </a></b> </p>
+
+</div>
 </div>
 </body>
-</HTML>
+</html>
