--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 body {
   background-color: #ddd;
 }
+
 </style>
 <!-- closes head section -->
 </head>
@@ -41,53 +42,29 @@ body {
 </div>
 <!-- Setting up Homepage Layout -->
 <div class="index">
-<div class="pictures">
-  <img src="Games/Games/RDR2.jpeg" alt="Picture of Red Dead Redemption 2" style="width:33.33%">
-  <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
-  <p> <b> <a href="games.html">Buy Red Dead Redemption 2 Now!</a></b> </p>
-  <p> <b> <a href="Seller.html">Want to sell Red Dead Redemption 2? Click here </a></b> </p>
-
+<div class="header">
+  <h1> Buy/Sell games now! </h1>
 </div>
-<div class="pictures">
-  <!-- Setting Width/Game Image for page -->
- <img src="Games/Games/BO4.jpeg" alt="Picture of Black Ops 4" style="width:33.33%">
- <!-- Setting Text Underneath game and hyperlink to the Buy page! -->
- <p> <b> <a href="games.html">Buy Black Ops 4 Now!</a></b> </p>
-   <p> <b> <a href="Seller.html">Want to sell Black Ops 4? Click here </a></b> </p>
-
-</div>
-<div class="pictures">
-  <!-- Setting Width/Game Image for page -->
-<img src="Games/Games/B5.jpeg" alt="Picture of Battlefield 5" style="width:33.33%">
-<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
-<p> <b> <a href="games.html">Buy Battlefield 5 Now!</a> </b> </p>
-  <p> <b> <a href="Seller.html">Want to sell Battlefield 5? Click here </a></b> </p>
-
-</div>
-<div class="pictures">
-  <!-- Setting Width/Game Image for page -->
-<img src="Games/Games/GOW.jpeg" alt="Picture of God of War" style="width:33.33%">
-<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
-<p> <b> <a href="games.html">Buy God of War Now</a></b> </p>
-  <p> <b> <a href="Seller.html">Want ot sell God of War? Click here </a></b> </p>
-
-</div>
-<div class="pictures">
-  <!-- Setting Width/Game Image for page -->
-<img src="Games/Games/SOT.jpeg" alt="Picture of Sea of theives" style="width:33.33%">
-<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
-<p> <b> <a href="games.html">Buy Sea of Theives Now!</a></b> </p>
-  <p> <b> <a href="Seller.html">Want to sell Sea of Thieves? Click here </a></b> </p>
-
-</div>
-<div class="pictures">
-  <!-- Setting Width/Game Image for page -->
-<img src="Games/Games/SM.jpeg" alt="Picture of Spider-Man" style="width:33.33%">
-<!-- Setting Text Underneath game and hyperlink to the Buy page! -->
-<p> <b> <a href="games.html">Buy Spider-Man Now!</a></b> </p>
-  <p> <b> <a href="Seller.html">Want to sell Spider-Man? Click here </a></b> </p>
-
-</div>
+<section class="container">
+  <div class="left-half">
+    <article>
+      <h1>Buy Games</h1>
+      <p>Interested in buying Popular titles for a cheaper price? You've made it to the right palce</p>
+      <br/>
+      <p> By clicking <a href="games.html"> Here </a> you can check out the newest titles we have available! </p>
+    </article>
+  </div>
+  <div class="right-half">
+    <article>
+      <h1>Sell Games</h1>
+      <p>Interested in selling for the website? We have all of our selling guides set up!</p>
+      <br/>
+      <p> In order to start selling, please check out<a href="Resell.html"> this</a> page in order to get started reselling </p>
+    </article>
+  </div>
+</section>
+<div class="main-section">
+<h4> Interested in more? There is alwayus the <a href="contact.html"> Contact </a> Page </h4>
 </div>
 </body>
 </html>
