--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
 <section class="container">
   <div class="left-half">
     <article>
-      <h1>Buy Games</h1>
+      <h2>Buy Games</h2>
       <p>Interested in buying Popular titles for a cheaper price? You've made it to the right palce</p>
       <br/>
       <p> By clicking <a href="games.html"> Here </a> you can check out the newest titles we have available! </p>
@@ -56,7 +56,7 @@ body {
   </div>
   <div class="right-half">
     <article>
-      <h1>Sell Games</h1>
+      <h2>Sell Games</h2>
       <p>Interested in selling for the website? We have all of our selling guides set up!</p>
       <br/>
       <p> In order to start selling, please check out<a href="Resell.html"> this</a> page in order to get started reselling </p>
@@ -65,6 +65,7 @@ body {
 </section>
 <div class="main-section">
 <h4> Interested in more? There is alwayus the <a href="contact.html"> Contact </a> Page </h4>
+</div>
 </div>
 </body>
 </html>
